sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:8: error: not found: value ecrat
    if (ecrat>1)
        ^AlgCombSort:10: error: type mismatch;
 found   : Int
 required: ?{def /(x$1: ? >: Double(1.3)): ?}
Note that implicit conversions are not applicable because they are ambiguous:
 both method int2long in object Int of type (x: Int)Long
 and method int2float in object Int of type (x: Int)Float
 are possible conversion functions from Int to ?{def /(x$1: ? >: Double(1.3)): ?}
      l/=1.3
      ^AlgCombSort:10: error: overloaded method value / with alternatives:
  (x: Int)Int <and>
  (x: Char)Int <and>
  (x: Short)Int <and>
  (x: Byte)Int
 cannot be applied to (Double)
      l/=1.3
       ^AlgCombSort:12: error: not found: value i
    i=0
    ^AlgCombSort:13: error: not found: value i
    while(i+ecart<l)
          ^AlgCombSort:15: error: not found: value i
      if(plusPetit(i+ecart,i))
                   ^AlgCombSort:15: error: not found: value i
      if(plusPetit(i+ecart,i))
                           ^AlgCombSort:17: error: not found: value i
        echange(i,i+ecart)
                ^AlgCombSort:17: error: not found: value i
        echange(i,i+ecart)
                  ^AlgCombSort:20: error: not found: value i
      i+=1
      ^